# FreeRDP

./: CMakeLists.txt
libNLA/: CMakeLists.txt  README.md
libNLA/include/libnla/: nla.h
libNLA/src/: nla.c
libfreerdp/: CMakeLists.txt
libfreerdp/core/: CMakeLists.txt  credssp_auth.c
